--- a/templates/my.cnf.j2
+++ b/templates/my.cnf.j2
@@ -72,6 +72,7 @@ innodb_flush_log_at_trx_commit = {{ mysql_innodb_flush_log_at_trx_commit }}
 innodb_flush_method	 = {{ mysql_innodb_flush_method }}
 innodb_lock_wait_timeout = {{ mysql_innodb_lock_wait_timeout }}
 innodb_file_format       = barracuda
+innodb_strict_mode       = 0
 
 [mysqldump]
 quick
