--- a/templates/my.cnf.j2
+++ b/templates/my.cnf.j2
@@ -1,5 +1,5 @@
 [client]
-port 			= {{ mysql_port }}
+port 			= {{ mariadb_port }}
 socket 			= {{ mariadb_socket }}
 
 [mysqld_safe]
@@ -8,36 +8,36 @@ nice                    = 0
 
 [mysqld]
 user                    = mysql
-pid-file                = {{ mysql_pid_file }}
+pid-file                = {{ mariadb_pid_file }}
 socket                  = {{ mariadb_socket }}
-port                    = {{ mysql_port }}
+port                    = {{ mariadb_port }}
 basedir                 = /usr
-datadir                 = {{ mysql_datadir }}
+datadir                 = {{ mariadb_datadir }}
 tmpdir                  = /tmp
 lc-messages-dir         = /usr/share/mysql
 
-bind-address		    = {{ mysql_bind_address }}
+bind-address		    = {{ mariadb_bind_address }}
 
 collation_server        = utf8_unicode_ci
 character-set-server	= utf8
 
 # Logging configuration.
-{% if mysql_log_error == 'syslog' or mysql_log == 'syslog' %}
+{% if mariadb_log_error == 'syslog' or mariadb_log == 'syslog' %}
 syslog
-syslog-tag = {{ mysql_syslog_tag }}
+syslog-tag = {{ mariadb_syslog_tag }}
 {% else %}
-{% if mysql_log %}
-log = {{ mysql_log }}
+{% if mariadb_log %}
+log = {{ mariadb_log }}
 {% endif %}
-log-error 		= {{ mysql_log_error }}
+log-error 		= {{ mariadb_log_error }}
 {% endif %}
 
-{% if mysql_slow_query_log_enabled %}
+{% if mariadb_slow_query_log_enabled %}
 # Slow query log configuration.
 log_slow_queries 	= 1
 slow_query_log 		= 1
-slow_query_log_file 	= {{ mysql_slow_query_log_file }}
-long_query_time 	= {{ mysql_slow_query_time }}
+slow_query_log_file 	= {{ mariadb_slow_query_log_file }}
+long_query_time 	= {{ mariadb_slow_query_time }}
 {% endif %}
 
 # Disabling symbolic-links is recommended to prevent assorted security risks
@@ -47,34 +47,34 @@ symbolic-links 		= 0
 ;performance_schema
 
 # Memory settings.
-key_buffer_size 	= {{ mysql_key_buffer_size }}
-max_allowed_packet 	= {{ mysql_max_allowed_packet }}
-table_open_cache 	= {{ mysql_table_open_cache }}
-sort_buffer_size 	= {{ mysql_sort_buffer_size }}
-read_buffer_size 	= {{ mysql_read_buffer_size }}
-read_rnd_buffer_size 	= {{ mysql_read_rnd_buffer_size }}
-myisam_sort_buffer_size = {{ mysql_myisam_sort_buffer_size }}
-thread_cache_size 	= {{ mysql_thread_cache_size }}
-query_cache_size 	= {{ mysql_query_cache_size }}
+key_buffer_size 	= {{ mariadb_key_buffer_size }}
+max_allowed_packet 	= {{ mariadb_max_allowed_packet }}
+table_open_cache 	= {{ mariadb_table_open_cache }}
+sort_buffer_size 	= {{ mariadb_sort_buffer_size }}
+read_buffer_size 	= {{ mariadb_read_buffer_size }}
+read_rnd_buffer_size 	= {{ mariadb_read_rnd_buffer_size }}
+myisam_sort_buffer_size = {{ mariadb_myisam_sort_buffer_size }}
+thread_cache_size 	= {{ mariadb_thread_cache_size }}
+query_cache_size 	= {{ mariadb_query_cache_size }}
 
 # Other settings.
-wait_timeout 		= {{ mysql_wait_timeout }}
+wait_timeout 		= {{ mariadb_wait_timeout }}
 
 # Try number of CPU's * 2 for thread_concurrency.
-thread_concurrency 	= {{ mysql_thread_concurrency }}
+thread_concurrency 	= {{ mariadb_thread_concurrency }}
 
 # InnoDB settings.
-innodb_file_per_table 	 = {{ mysql_innodb_file_per_table }}
-innodb_buffer_pool_size  = {{ mysql_innodb_buffer_pool_size }}
-innodb_log_file_size 	 = {{ mysql_innodb_log_file_size }}
-innodb_log_buffer_size 	 = {{ mysql_innodb_log_buffer_size }}
-innodb_flush_log_at_trx_commit = {{ mysql_innodb_flush_log_at_trx_commit }}
-innodb_flush_method	 = {{ mysql_innodb_flush_method }}
-innodb_lock_wait_timeout = {{ mysql_innodb_lock_wait_timeout }}
+innodb_file_per_table 	 = {{ mariadb_innodb_file_per_table }}
+innodb_buffer_pool_size  = {{ mariadb_innodb_buffer_pool_size }}
+innodb_log_file_size 	 = {{ mariadb_innodb_log_file_size }}
+innodb_log_buffer_size 	 = {{ mariadb_innodb_log_buffer_size }}
+innodb_flush_log_at_trx_commit = {{ mariadb_innodb_flush_log_at_trx_commit }}
+innodb_flush_method	 = {{ mariadb_innodb_flush_method }}
+innodb_lock_wait_timeout = {{ mariadb_innodb_lock_wait_timeout }}
 innodb_file_format       = barracuda
 innodb_strict_mode       = 0
 
 [mysqldump]
 quick
-max_allowed_packet 	= {{ mysql_mysqldump_max_allowed_packet }}
+max_allowed_packet 	= {{ mariadb_mysqldump_max_allowed_packet }}
 
