fix err with unix_socket

--- a/templates/my.cnf.j2
+++ b/templates/my.cnf.j2
@@ -7,6 +7,7 @@ socket                  = {{ mariadb_socket }}
 nice                    = 0
 
 [mysqld]
+plugin-load-add         = auth_socket.so
 user                    = mysql
 pid-file                = {{ mariadb_pid_file }}
 socket                  = {{ mariadb_socket }}
